--- a/index.html
+++ b/index.html
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Romduol-ដី ផ្ទះ ប្លង់រឹង</title>
+
+    <style>
+        .responsive {
+            width: 100%;
+            height: auto;
+        }
+    </style>
+
 </head>
+
 <body>
     <h3>
         ដីលក់ កំពង់ចាម
@@ -16,6 +26,7 @@
             <li>លេខទាក់ទង 093233756</li>
         </ul>
     </h3>
-    <img src="images/id1.jpg" alt="">
+    <img class="responsive" src="images/id1.jpg" alt="">
 </body>
+
 </html>
